Bug 1136792 - "Advanced Address Book Search" has no effect on main AB "All ABs" contacts list pane. r=mkmelin ui-r=Paenglab